scalaplugin/src/test/resource/acyclic/src/test/resources/success/pkg/mutualcyclic/a/A2.scala
package success.cyclicpackage.a


class A2 {

 }
