scalaplugin/src/test/resource/acyclic/src/test/resources/fail/cyclicpackage/a/A2.scala
package fail.cyclicpackage.a
class A2 {

}
